--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/daterange.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/daterange.css
@@ -1,19 +1,31 @@
 .yui-skin-lecmTheme .yui-panel .lecm-daterange-control .datarange-start-date,
-.yui-skin-lecmTheme .yui-panel .lecm-daterange-control .datarange-unlimited,
 .yui-skin-lecmTheme .yui-panel .lecm-daterange-control .datarange-end-date,
-.yui-skin-lecmTheme .lecm-daterange-control .datarange-start-date {
+.yui-skin-lecmTheme .yui-panel .lecm-daterange-control .datarange-unlimited,
+.yui-skin-lecmTheme .lecm-daterange-control .datarange-start-date,
+.yui-skin-lecmTheme .lecm-daterange-control .datarange-end-date,
+.yui-skin-lecmTheme .lecm-daterange-control .datarange-unlimited {
 	float: left;
 }
 
-.yui-skin-lecmTheme .yui-panel .lecm-daterange-control .datarange-unlimited div.form-field {
+.yui-skin-lecmTheme .yui-panel .lecm-daterange-control .datarange-unlimited div.form-field,
+.yui-skin-lecmTheme .lecm-daterange-control .datarange-unlimited div.form-field {
 	width: auto;
 	margin-left: 20px;
 }
 
-.yui-skin-lecmTheme .yui-panel .lecm-daterange-control .datarange-end-date div.form-field > div:not(.datagrid):not(.viewmode-field):not(.subscribe) {
+.yui-skin-lecmTheme .yui-panel .lecm-daterange-control .datarange-end-date div.form-field > div:not(.datagrid):not(.viewmode-field):not(.subscribe),
+.yui-skin-lecmTheme .lecm-daterange-control .datarange-end-date div.form-field > div.viewmode-field {
 	margin-left: 15px;
 }
 
-.yui-skin-lecmTheme .yui-panel .lecm-daterange-control .datarange-end-date div.form-field label {
+.yui-skin-lecmTheme .yui-panel .lecm-daterange-control .datarange-end-date div.form-field label,
+.yui-skin-lecmTheme div.dashlet-metadata div.lecm-daterange-control div.datarange-end-date div.form-field span.viewmode-label,
+.yui-skin-lecmTheme div.dashlet-metadata div.lecm-daterange-control div.datarange-unlimited div.form-field span.viewmode-label {
 	width: auto;
+}
+.yui-skin-lecmTheme div.dashlet-metadata div.lecm-daterange-control div.datarange-unlimited {
+    margin-left: 20px;
+}
+.yui-skin-lecmTheme div.dashlet-metadata div.set div.lecm-daterange-control div.datarange-unlimited div.form-field span.viewmode-value {
+	width: 78px;
 }
